# sqlx-xugu

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  ReadMe.md
src/: any.rs  arguments.rs  column.rs  database.rs  error.rs  lib.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
src/connection/: establish.rs  executor.rs  id.rs  mod.rs  stream.rs
src/connection/ssl/: mod.rs  rsa.rs
src/io/: decode.rs  io_ext.rs  mod.rs
src/options/: connect.rs  mod.rs  parse.rs
src/protocol/: message.rs  mod.rs  server_context.rs
src/protocol/message/: data_row.rs  delete_response.rs  error_response.rs  insert_response.rs  message_response.rs  parameter_description.rs  ready_for_query.rs  row_description.rs  update_response.rs
src/protocol/statement/: execute.rs  mod.rs  prepare.rs  prepare_ok.rs  stmt_close.rs
src/protocol/text/: column.rs  mod.rs  ok.rs  ping.rs  query.rs
src/types/: bigdecimal.rs  bool.rs  bytes.rs  float.rs  int.rs  json.rs  mod.rs  rust_decimal.rs  std_duration.rs  str.rs  text.rs  uint.rs  uuid.rs
src/types/chrono/: interval.rs  mod.rs
src/types/geometry/: box.rs  circle.rs  line.rs  line_seg.rs  mod.rs  path.rs  point.rs  polygon.rs
src/types/time/: interval.rs  mod.rs
