[package]
name = "sqlx-xugu"
version = "0.8.6-0"
edition = "2021"
repository = "https://github.com/BrightX/sqlx-xugu"
description = "Xugu driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
keywords = ["database", "async", "xugu"]
categories = ["database", "asynchronous"]
authors = [
    "BrightXu <BrightXu666@qq.com>",
]
include = [
    "src/*",
    "LICENSE*",
    "ReadMe.md",
]

[features]
json = ["sqlx-core/json", "serde"]
any = ["sqlx-core/any"]
offline = ["sqlx-core/offline", "serde/derive"]
migrate = ["sqlx-core/migrate"]

# Type Integration features
bigdecimal = ["dep:bigdecimal", "sqlx-core/bigdecimal"]
chrono = ["dep:chrono", "sqlx-core/chrono"]
rust_decimal = ["dep:rust_decimal", "rust_decimal/maths", "sqlx-core/rust_decimal"]
time = ["dep:time", "sqlx-core/time"]
uuid = ["dep:uuid", "sqlx-core/uuid"]

[dependencies]
sqlx-core = "=0.8.6"

# Futures crates
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc", "sink", "io"] }

# Type Integrations
bigdecimal = { version = "0.4.0", optional = true }
chrono = { version = "0.4.34", default-features = false, features = ["std", "clock"], optional = true }
rust_decimal = { version = "1.26.1", default-features = false, features = ["std"], optional = true }
time = { version = "0.3.36", features = ["formatting", "parsing", "macros", "local-offset"], optional = true }
uuid = { version = "1.1.2", optional = true }

# Misc
bitflags = { version = "2", default-features = false, features = ["serde"] }
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
bytes = "1.1.0"
getrandom = "0.3"
log = "0.4"
num-bigint = { version = "0.4", default-features = false }
tracing = { version = "0.1.37", features = ["log"] }
turing-cipher = "0.1"

serde = { version = "1.0.144", optional = true }
